# quotatally-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/quotatally/: __init__.py  aggregator.py  cli.py  db.py  parser.py  pricing.py  report.py  watcher.py
tests/: test_aggregator.py  test_codex_parser.py  test_db.py  test_parser.py  test_pricing.py  test_watcher.py
