[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quotatally"
version = "0.1.0"
description = "Cross-client AI cost attribution from local session logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Todor Zegovic" }]
keywords = ["ai", "cost", "observability", "claude", "codex", "cursor", "tokens"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
quotatally = "quotatally.cli:main"

[project.urls]
Homepage = "https://github.com/tozegovic/quotatally"
Issues = "https://github.com/tozegovic/quotatally/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quotatally"]
